@@ -1,7 +1,7 @@
 6071edd604dbeb75308cfbedc7790398 *cleanup
 30a444c58adaf9b99783d22d75d60c61 *configure
 2f5c53949e9b803d6a51f29066966f70 *DESCRIPTION
-d35ef43a14f3f264d1637211ea8c344d *inst/NEWS.Rd
+9cf93298326a8dbf32ac14957ceb2114 *inst/NEWS.Rd
 a87b0f223435ed35607e8514562b8bfe *LICENSE
 8f19a2c9feb2f352580fd4892650f285 *man/count.Rd
 d143e1321d840bb810d9648e54e22c9c *man/fpos.Rd
@@ -23,7 +23,7 @@ b6d184807563eb8d74a8586c598ed770 *src/init.c
 cdcf7d1759e07f4079b8664f7e3b8192 *src/kit.h
 63b898312ccf39a20bd7fbd8dcca5621 *src/Makevars.in
 95e3011e37d9dde0d75f3a3819b2acd3 *src/Makevars.win
-272d9b5e1d719d4ad2112cd2696b8890 *src/nswitch.c
+ed7eaf3c841b000055578fc85e2e9a4c *src/nswitch.c
 d2f4fdbd388ae96944e5de4e7c8fb138 *src/psum.c
 91d603f722355667800428c1a6c03d34 *src/topn.c
 7594787e656e81a952602afa1711405b *src/utils.c
